<resources>
    <string name="app_name">闪瞎眼</string>
    <string name="user_login_tip">账号密码登录</string>
    <string name="account">账号</string>
    <string name="username_hint">输入员工账号/手机/邮箱</string>
    <string name="password">密码</string>
    <string name="password_hint">请输入密码</string>
    <string name="identifying_code">验证码</string>
    <string name="enter_identifying_code_hint">请输入右侧验证码</string>
    <string name="refresh">刷新</string>
    <string name="login">登录</string>
    <string name="login_expired">登录信息失效，请重新登录</string>
    <string name="identify_code_error">验证码错误</string>
    <string name="account_password_error">账号或密码错误</string>
    <string name="fetch_data_error">获取数据错误</string>
    <string name="tip_double_click_exit">再次点击退出</string>
    <string name="text1">带通采样</string>
    <string name="text2">空间损耗</string>
    <string name="text3">波束宽度</string>
    <string name="text4">功率单位</string>
    <string name="text5">通视高度</string>
    <string name="title_activity_show_freq">ShowFreqActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="confirm">Confirm</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
